--- a/webVersione/scss/log-in.scss
+++ b/webVersione/scss/log-in.scss
@@ -3,6 +3,8 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    justify-content: space-between;
+
 
     .logo {
         width: 44px;
@@ -22,7 +24,7 @@
     }
 }
 
-ul {
+ul .menu__items {
     margin-bottom: 0;
 }
 
@@ -30,9 +32,6 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    img {}
-
 }
 
 .access {
@@ -44,10 +43,7 @@ ul {
     }
 }
 
-.color-red {
-    color: #FF2625;
-}
-
+// ==============Form===============
 .container {
     margin: 20px 0;
     display: flex;
@@ -87,14 +83,18 @@ ul {
     gap: 15px;
 }
 
+// ==============PASSWORD===============
 #inputPassword {
     align-self: center;
-    max-width: 370px;
+    // max-width: 370px;
     margin: 0 auto;
 }
-.visibility{
-  position: relative;
-  left: 280px;
-  bottom: 30px;
-  width: 24px;
+
+.visibility {
+    position: relative;
+    left: 280px;
+    bottom: 30px;
+    width: 24px;
 }
+
+// ==============CAROUSEL===============
