add block sqaudra nel index html

--- a/webVersione/css/itc-slider.css
+++ b/webVersione/css/itc-slider.css
@@ -9,6 +9,9 @@
  */
 .carousel {
   max-width: 1100px;
+  -ms-flex-item-align: center;
+      align-self: center;
+  text-align: center;
 }
 
 .itc-slider {
