--- a/webVersione/css/log-in.css
+++ b/webVersione/css/log-in.css
@@ -28,7 +28,7 @@
   width: 100%;
 }
 
-ul .menu__items {
+ul {
   margin-bottom: 0;
 }
 
@@ -46,6 +46,7 @@ ul .menu__items {
 }
 
 .access_text {
+  text-align: center;
   font-size: 44px;
   font-weight: 700;
 }
