--- a/webVersione/css/style.css
+++ b/webVersione/css/style.css
@@ -576,6 +576,18 @@ svg {
   }
 }
 
+.squadra-main__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
 .footer {
   background-color: #FFF3F4;
   padding: 15px 0;
