--- a/webVersione/scss/style.scss
+++ b/webVersione/scss/style.scss
@@ -579,6 +579,14 @@ svg {
     }
 }
 
+// ================Position slider==========================
+
+.squadra-main__container {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
 
 // ================footer==========================
 .footer {}
