add and fix site account

--- a/webVersione/css/log-in.css
+++ b/webVersione/css/log-in.css
@@ -1,3 +1,13 @@
+.main__log-in {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .log-in {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -64,10 +74,16 @@ ul {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 20px;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 .container * {
   -ms-flex-item-align: center;
       align-self: center;
+  width: 100%;
+}
+
+#container-log-in {
   width: 100%;
 }
 
@@ -88,4 +104,44 @@ ul {
   left: 280px;
   bottom: 30px;
   width: 24px;
+}
+
+.visibility_account {
+  position: absolute;
+  right: 10px;
+  bottom: 7px;
+  width: 24px;
+}
+
+.account {
+  background-color: #FF2625;
+}
+.account__image {
+  margin-top: 60px;
+  -ms-flex-item-align: start;
+      align-self: start;
+}
+.account__image img {
+  max-width: 200px;
+}
+.account__userData {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 50px;
+}
+.account__userData .container {
+  width: 500px;
+}
+
+.col-8 {
+  position: relative;
+}
+
+#btn_accedi .btn {
+  width: 100%;
 }
