--- a/webVersione/scss/style.scss
+++ b/webVersione/scss/style.scss
@@ -146,6 +146,7 @@ a {
     // .btn__white
     &__white {
         border: #91C9FF 1px solid;
+        background-color: #fff;
     }
 }
 
@@ -660,4 +661,10 @@ svg {
     flex-direction: column;
     align-items: center;
     grid-row: 1 / span 2;
+}
+
+.logo-footer {
+    img {
+        width: 30px;
+    }
 }
