risolti tanti bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <div class="header__container">
                 <menu class="header__menu menu">
                     <div class="menu__logo logo">
-                        <a href="index.html"><img src="../static/img/logo/logo.png" alt="logo"></a>
+                        <a href="index"><img src="../static/img/logo/logo.png" alt="logo"></a>
                     </div>
                     <ul class="menu__items">
                         <!-- <li class="menu__item"><a class="link" href="#">Casa</a></li> -->
@@ -29,7 +29,7 @@
                         <li class="menu__item"><a class="link" href="#dreamTeam">Chi siamo</a></li>
                     </ul>
                     <div class="menu__burger">
-                        <a href="log-in.html#logo_log-in"><img src="../static/img/ico/login.png" alt="menu"></a>
+                        <a href="login"><img src="../static/img/ico/login.png" alt="menu"></a>
                     </div>
                 </menu>
             </div>
