--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -23,10 +23,10 @@
       <div class="header__container">
         <menu class="header__menu menu">
           <div class="menu__logo logo">
-            <a href="index.html"><img src="../static/img/ico/home-189.svg" alt="logo"></a>
+            <a href="index"><img src="../static/img/ico/home-189.svg" alt="logo"></a>
           </div>
           <ul class="menu__items">
-            <li class="menu__item"><a class="link" href="index.html">Tornare a casa</a></li>
+            <li class="menu__item"><a class="link" href="index">Tornare a casa</a></li>
           </ul>
           <!-- <div class="menu__burger">
             <a href="log-in.html"><img src="../static/img/ico/login.png" alt="menu"></a>
@@ -39,7 +39,7 @@
 
     </div>
     <h1 class="access_text">Benvenuto su <span class="color-red">__Palestriamoci</span> </h1>
-    <form class="container col-5 " id="container-form">
+    <form class="container col-5 " id="container-form" action="/register" method="post">
       <div class="col-auto">
         <div class="col-8 col2">
           <div class="col-8">
