--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -10,9 +10,9 @@
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../static/css/style.css">
-  <link rel="stylesheet" href="../static/css/log-in.css">
-  <link rel="icon" href="../static/img/logo/logoRed.ico">
+  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/static/css/log-in.css">
+  <link rel="icon" href="/static/img/logo/logoRed.ico">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
@@ -23,10 +23,10 @@
       <div class="header__container">
         <menu class="header__menu menu">
           <div class="menu__logo logo">
-            <a href="index.html"><img src="../static/img/ico/home-189.svg" alt="logo"></a>
+            <a href="index"><img src="/static/img/ico/home-189.svg" alt="logo"></a>
           </div>
           <ul class="menu__items">
-            <li class="menu__item"><a class="link" href="index.html">Tornare a casa</a></li>
+            <li class="menu__item"><a class="link" href="index">Tornare a casa</a></li>
           </ul>
           <!-- <div class="menu__burger">
             <a href="log-in.html"><img src="../static/img/ico/login.png" alt="menu"></a>
@@ -39,17 +39,17 @@
         <img src="../static/img/logo/logo.png" style="width: 200px;" alt="Logo" id="logo_log-in">
       </div>
       <h1 class="access_text">Benvenuto su <span class="color-red">__Palestriamoci</span> </h1>
-      <form class="container col-5 " id="container-log-in">
+      <form class="container col-5 " id="container-log-in" action="/login" method="post">
         <div class="col-auto">
           <div class="col-8">
             <label for="exampleFormControlInput1" class="col-form-label" id="email">Email address</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com">
+            <input type="email" class="form-control" name="inputEmail" id="inputEmail" placeholder="name@example.com">
           </div>
         </div>
         <div class="col-auto">
           <div class="col-8">
             <label for="inputPassword6" class="col-form-label">Password</label>
-            <input type="password" id="inputPassword" maxlength="20" minlength="8" class="form-control"
+            <input type="password" name="inputPassword" id="inputPassword" maxlength="20" minlength="8" class="form-control"
               aria-describedby="passwordHelpInline" placeholder="Must be 8-20 characters long.">
             <span class="material-symbols-outlined visibility" type="button" onclick="showPwd()"
               value="Mostra/nascondi password">
