--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/log-in.css">
     <link rel="stylesheet" href="../static/css/itc-slider.css">
-    <link rel="icon" href="img/logo/logoRed.ico">
+    <link rel="icon" href="../static/img/logo/logoRed.ico">
     <script src="../static/js/itc-slider.js" defer></script>
 </head>
 
