--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -11,7 +11,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/log-in.css">
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="icon" href="img/logo/logoRed.ico">
+    <link rel="icon" href="../static/img/logo/logoRed.ico">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Document</title>
@@ -55,22 +55,22 @@
                             <div class="col-8">
                                 <label for="exampleFormControlInput1" class="col-form-label"
                                     id="surname">Cognome</label>
-                                <input type="text" class="form-control" name="inputCognome" id="inputCognome" name="userSurname"
-                                    value="{{athlete.surname}}">
+                                <input type="text" class="form-control" name="inputCognome" id="inputCognome"
+                                    name="userSurname" value="{{athlete.surname}}">
                             </div>
                         </div>
                         <div class="col-8 col2">
                             <div class="col-8">
                                 <label for="exampleFormControlInput1" class="col-form-label" id="email">Data di nascita
                                 </label>
-                                <input type="date" class="form-control" name="inputDate" id="inputDate" name="userDateOfBirth"
-                                    value="{{athlete.date_of_birth}}">
+                                <input type="date" class="form-control" name="inputDate" id="inputDate"
+                                    name="userDateOfBirth" value="{{athlete.date_of_birth}}">
                             </div>
                             <div class="col-8">
                                 <label for="exampleFormControlInput1" class="col-form-label" id="email">Email
                                     address</label>
-                                <input type="email" class="form-control" name="inputEmail" id="inputEmail" name="userEmail"
-                                    value="{{athlete.email}}">
+                                <input type="email" class="form-control" name="inputEmail" id="inputEmail"
+                                    name="userEmail" value="{{athlete.email}}">
                             </div>
                         </div>
                         <div class="col-8">
