--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>__Palestriamoci</title>
+    <title>__Palestriamoci: home</title>
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/log-in.css">
     <link rel="stylesheet" href="../static/css/itc-slider.css">
