--- a/static/css/log-in.css
+++ b/static/css/log-in.css
@@ -1,3 +1,26 @@
+.wrapper_account {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main__log-in {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .log-in {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -10,6 +33,9 @@
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .log-in .logo {
   width: 44px;
@@ -41,13 +67,11 @@ ul {
       -ms-flex-align: center;
           align-items: center;
 }
+
 .access_text {
+  text-align: center;
   font-size: 44px;
   font-weight: 700;
-}
-
-.color-red {
-  color: #FF2625;
 }
 
 .container {
@@ -56,19 +80,6 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 20px;
-}
-.container * {
-  -ms-flex-item-align: center;
-      align-self: center;
-  width: 100%;
-} vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
@@ -101,13 +112,6 @@ ul {
   margin: 0 auto;
 }
 
-.visibility {
-  position: relative;
-  left: 280px;
-  bottom: 30px;
-  width: 24px;
-}
-
 .visibility_account {
   position: absolute;
   right: 10px;
@@ -116,6 +120,9 @@ ul {
 }
 
 .account {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   background-color: #FF2625;
 }
 .account__image {
