--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Palestriamoci</title>
+  <title>__Palestriamoci: log-in</title>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
@@ -49,9 +49,9 @@
         <div class="col-auto">
           <div class="col-8">
             <label for="inputPassword6" class="col-form-label">Password</label>
-            <input type="password" name="inputPassword" id="inputPassword" maxlength="20" minlength="8" class="form-control"
-              aria-describedby="passwordHelpInline" placeholder="Must be 8-20 characters long.">
-            <span class="material-symbols-outlined visibility" type="button" onclick="showPwd()"
+            <input type="password" name="inputPassword" id="inputPassword" maxlength="20" minlength="8"
+              class="form-control" aria-describedby="passwordHelpInline" placeholder="Must be 8-20 characters long.">
+            <span class="material-symbols-outlined visibility_account" type="button" onclick="showPwd()"
               value="Mostra/nascondi password">
               visibility
             </span>
@@ -68,7 +68,7 @@
               class="color-red ">Registrati</span></a>
         </div>
         <div class="col-auto container btn_log-in" id="btn_accedi">
-          <button type="submit" class="btn btn__red mb-3">Accedi</button>
+          <button type="submit" class="btn btn__white mb-3">Accedi</button>
         </div>
       </form>
     </main>
