--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -14,82 +14,106 @@
     <link rel="icon" href="../static/img/logo/logoRed.ico">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <title>Document</title>
+    <title>__Palestriamoci: Il Mio Account</title>
 </head>
 
 <body>
-    <header class="header" id="header">
-        <div class="header__container">
-            <menu class="header__menu menu">
-                <div class="menu__logo logo">
-                    <a href="index"><img src="../static/img/logo/logo.png" alt="logo"></a>
-                </div>
-                <ul class="menu__items">
-                    <li class="menu__item"><a class="link" href="index">Casa</a></li>
-                    <!-- <li class="menu__item"><a class="link" href="my_account.html">Il Mio Account</a></li> -->
-                    <li class="menu__item"><a class="link" href="index#dreamTeam">Chi Siamo</a></li>
-                    <!-- <li class="menu__item"><a class="link" href="#">Contatti</a></li> -->
-                </ul>
-                <div class="menu__burger">
-                    <a href="login"><img src="../static/img/ico/login.png" alt="menu"></a>
-                </div>
-            </menu>
-        </div>
-    </header>
-    <section class="account">
-        <div class="account__container">
-
-
-            <div class="account__userData">
-                <div class="account__image">
-                    <img src="../static/img/ico/account_img.png" alt="account image">
-                </div>
-                <form class="container col-5 " id="container-form">
-                    <div class="col-auto">
-                        <div class="col-8 col2">
-                            <div class="col-8">
-                                <label for="exampleFormControlInput1" class="col-form-label" id="nome">Nome</label>
-                                <input type="text" class="form-control" name="inputNome" id="inputNome" name="userName"
-                                    value="{{athlete.name}}">
-                            </div>
-                            <div class="col-8">
-                                <label for="exampleFormControlInput1" class="col-form-label"
-                                    id="surname">Cognome</label>
-                                <input type="text" class="form-control" name="inputCognome" id="inputCognome"
-                                    name="userSurname" value="{{athlete.surname}}">
-                            </div>
-                        </div>
-                        <div class="col-8 col2">
-                            <div class="col-8">
-                                <label for="exampleFormControlInput1" class="col-form-label" id="email">Data di nascita
-                                </label>
-                                <input type="date" class="form-control" name="inputDate" id="inputDate"
-                                    name="userDateOfBirth" value="{{athlete.date_of_birth}}">
-                            </div>
-                            <div class="col-8">
-                                <label for="exampleFormControlInput1" class="col-form-label" id="email">Email
-                                    address</label>
-                                <input type="email" class="form-control" name="inputEmail" id="inputEmail"
-                                    name="userEmail" value="{{athlete.email}}">
-                            </div>
-                        </div>
-                        <div class="col-8">
-                            <label for="inputPassword6" class="col-form-label">Password</label>
-                            <input type="password" id="inputPassword" maxlength="20" minlength="8" class="form-control"
-                                aria-describedby="passwordHelpInline" value="{{athlete.password}}">
-                            <span class="material-symbols-outlined visibility_account" type="button" onclick="showPwd()"
-                                value="Mostra/nascondi password">
-                                visibility
-                            </span>
-                        </div>
+    <div class="wrapper wrapper_account">
+        <header class="header" id="header">
+            <div class="header__container">
+                <menu class="header__menu menu">
+                    <div class="menu__logo logo">
+                        <a href="index"><img src="../static/img/logo/logo.png" alt="logo"></a>
                     </div>
-                    <div class="col-auto container btn_sign-ing" id="btn_accedi">
-                        <button type="submit" class="btn btn__white mb-3">Cambiare i dati</button>
+                    <ul class="menu__items">
+                        <li class="menu__item"><a class="link" href="index">Casa</a></li>
+                        <!-- <li class="menu__item"><a class="link" href="my_account.html">Il Mio Account</a></li> -->
+                        <li class="menu__item"><a class="link" href="index#dreamTeam">Chi Siamo</a></li>
+                        <!-- <li class="menu__item"><a class="link" href="#">Contatti</a></li> -->
+                    </ul>
+                    <div class="menu__burger">
+                        <a href="login"><img src="../static/img/ico/login.png" alt="menu"></a>
                     </div>
-                </form>
+                </menu>
             </div>
-        </div>
-    </section>
+        </header>
+        <section class="account">
+            <div class="account__container">
+
+
+                <div class="account__userData">
+                    <div class="account__image">
+                        <img src="../static/img/ico/account_img.png" alt="account image">
+                    </div>
+                    <form class="container col-5 " id="container-form">
+                        <div class="col-auto">
+                            <div class="col-8 col2">
+                                <div class="col-8">
+                                    <label for="exampleFormControlInput1" class="col-form-label" id="nome">Nome</label>
+                                    <input type="text" class="form-control" name="inputNome" id="inputNome"
+                                        name="userName" value="{{athlete.name}}">
+                                </div>
+                                <div class="col-8">
+                                    <label for="exampleFormControlInput1" class="col-form-label"
+                                        id="surname">Cognome</label>
+                                    <input type="text" class="form-control" name="inputCognome" id="inputCognome"
+                                        name="userSurname" value="{{athlete.surname}}">
+                                </div>
+                            </div>
+                            <div class="col-8 col2">
+                                <div class="col-8">
+                                    <label for="exampleFormControlInput1" class="col-form-label" id="email">Data di
+                                        nascita
+                                    </label>
+                                    <input type="date" class="form-control" name="inputDate" id="inputDate"
+                                        name="userDateOfBirth" value="{{athlete.date_of_birth}}">
+                                </div>
+                                <div class="col-8">
+                                    <label for="exampleFormControlInput1" class="col-form-label" id="email">Email
+                                        address</label>
+                                    <input type="email" class="form-control" name="inputEmail" id="inputEmail"
+                                        name="userEmail" value="{{athlete.email}}">
+                                </div>
+                            </div>
+                            <div class="col-8">
+                                <label for="inputPassword6" class="col-form-label">Password</label>
+                                <input type="password" id="inputPassword" maxlength="20" minlength="8"
+                                    class="form-control" aria-describedby="passwordHelpInline"
+                                    value="{{athlete.password}}">
+                                <span class="material-symbols-outlined visibility_account" type="button"
+                                    onclick="showPwd()" value="Mostra/nascondi password">
+                                    visibility
+                                </span>
+                            </div>
+                        </div>
+                        <div class="col-auto container btn_sign-ing" id="btn_accedi">
+                            <button type="submit" class="btn btn__white mb-3">Cambiare i dati</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="footer__container">
+                <div class="footer__icons">
+                    <div class="social-contacts">
+                        <a class="logo-footer" href="#header"><img src="../static/img/logo/logoRed.png" alt="logo"></a>
+                        <a target="_blank" href="https://www.youtube.com/"><img
+                                src="../static/img/ico/social/youtube.svg" alt="YouTube"></a>
+                        <a target="_blank" href="https://www.facebook.com/"><img
+                                src="../static/img/ico/social/facebook.svg" alt="facebook"></a>
+                        <a target="_blank" href="https://www.instagram.com/"><img
+                                src="../static/img/ico/social/instagram.svg" alt="instagram"></a>
+                    </div>
+                </div>
+                <p class="footer__topText">Palestriamoci è un'app di fitness che offre allenamenti personalizzati per
+                    appassionati e atleti, adattandosi a obiettivi e preferenze.</p>
+                <p class="footer__bottomText">Creato da un gruppo di studenti seduti nell'ultimo banco di Academy Angelo
+                    Rizzoli. Tutti i diritti riservati. 2023-2024</p>
+
+            </div>
+        </footer>
+    </div>
     <script>
         function showPwd() {
             var input = document.getElementById('inputPassword');
