--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                             basati su obiettivi, livello di forma e preferenze.</p>
                         <div class="block-main__buttons">
                             <button class="btn btn__red">
-                                <a href="sign-in.html#logo_log-in">
+                                <a href="/register">
                                     <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
                                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                                         <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
