--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -44,26 +44,26 @@
         <div class="col-8 col2">
           <div class="col-8">
             <label for="exampleFormControlInput1" class="col-form-label" id="nome">Nome</label>
-            <input type="text" class="form-control" id="inputNome" placeholder="...">
+            <input type="text" class="form-control" name="inputNome" id="inputNome" placeholder="...">
           </div>
           <div class="col-8">
             <label for="exampleFormControlInput1" class="col-form-label" id="surname">Cognome</label>
-            <input type="text" class="form-control" id="inputCognome" placeholder="...">
+            <input type="text" class="form-control" name="inputCognome" id="inputCognome" placeholder="...">
           </div>
         </div>
         <div class="col-8 col2">
           <div class="col-8">
-            <label for="exampleFormControlInput1" class="col-form-label" id="email">Data di nascita </label>
-            <input type="date" class="form-control" id="inputDate" placeholder="YYYY/MM/DD">
+            <label for="exampleFormControlInput1" class="col-form-label" id="date">Data di nascita </label>
+            <input type="date" class="form-control" name="inputDate" id="inputDate" placeholder="YYYY/MM/DD">
           </div>
           <div class="col-8">
             <label for="exampleFormControlInput1" class="col-form-label" id="email">Email address</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com">
+            <input type="email" class="form-control" name="inputEmail" id="inputEmail" placeholder="name@example.com">
           </div>
         </div>
         <div class="col-8">
           <label for="inputPassword6" class="col-form-label">Password</label>
-          <input type="password" id="inputPassword" maxlength="20" minlength="8" class="form-control"
+          <input type="password" name="inputPassword" id="inputPassword" maxlength="20" minlength="8" class="form-control"
             aria-describedby="passwordHelpInline" placeholder="Must be 8-20 characters long.">
           <span class="material-symbols-outlined visibility" type="button" onclick="showPwd()"
             value="Mostra/nascondi password">
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div id="link_log-in">
-        <span>Hai già un account? </span><a class="link" href="log-in.html#logo_log-in"><span
+        <span>Hai già un account? </span><a class="link" href="login"><span
             class="color-red ">Accedi</span></a>
       </div>
       <div class="col-auto container btn_sign-ing" id="btn_accedi">
